--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>Panda Go</title>
 </head>
 <body>
-    Panda Go 2021 - Bienvenido
+    Panda Go 2021 - Bienvenido  Graciela amiga mia si lees esto te quiero decir que te pagare el helado que te debo :3
+
 </body>
 </html>
