--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>Panda Go</title>
+    <title>Document</title>Mi amiga Graciela</title>
 </head>
 <body>
-    Panda Go 2021 - Bienvenido  Graciela amiga mia si lees esto te quiero decir que te pagare el helado que te debo :3
+    Panda Go 2021 - Bienvenido  
+    Hola Graciela
+    Me amas lo se :v
+    Bueno solo venia aqui a decirte por medio de esta pagina
+    (que por cierto e creado a manera de prueba)
+    para decirte que ya hice un video extraño cool?
+    Bueno recien estoy aprendiendo a hacer paginas asi que deseame suerte
+    Posdata: no quiero reprobar el ciclo.
+
+    Asi tambien tengo curiosidad ¿Que opinas de las parejas de nuestra historia?
+    Algun dia sacare mi propia pagina que competira contra otras apps.
+    Eso espero
 
 </body>
 </html>
